# uniset3

./: .gitignore  Makefile.am  README.md  TODO  configure.ac  libUniSet2.pc.in  libUniSet3.include  libUniSet3.pc.in  uniset-config.h  uniset2.files  uniset3.files  uniset3.includes  update-files.sh
extensions/: Makefile.am  libUniSet3Extensions.pc.in
extensions/Backend-ClickHouse/: BackendClickHouse.cc  BackendClickHouse.h  ClickHouseInterface.cc  ClickHouseInterface.h  ClickHouseTagsConfig.cc  ClickHouseTagsConfig.h  Makefile.am  helper.cc  libUniSet3BackendClickHouse.pc.in  main.cc  start_fg.sh  test.cc
extensions/Backend-ClickHouse/tests/: Makefile.am  test-clickhouse-config.xml  test_ClickHouseTagsConfig.cc
extensions/Backend-OpenTSDB/: BackendOpenTSDB.cc  BackendOpenTSDB.h  Makefile.am  libUniSet3BackendOpenTSDB.pc.in  main.cc  start_fg.sh
extensions/DBServer-MySQL/: DBServer_MySQL.cc  DBServer_MySQL.h  Makefile.am  MySQLInterface.cc  MySQLInterface.h  create_links.sh  libUniSet3MySQL.pc.in  main.cc  start_fg.sh  test.cc
extensions/DBServer-PostgreSQL/: DBServer_PostgreSQL.cc  DBServer_PostgreSQL.h  Makefile.am  PostgreSQLInterface.cc  PostgreSQLInterface.h  libUniSet3PostgreSQL.pc.in  main.cc  start_fg.sh  test.cc
extensions/DBServer-SQLite/: DBServer_SQLite.cc  DBServer_SQLite.h  Makefile.am  SQLiteInterface.cc  SQLiteInterface.h  libUniSet3SQLite.pc.in  main.cc  start_fg.sh  test.cc
extensions/HttpAPIGateway/: APIGateway.proto  HttpAPIGateway.cc  HttpAPIGateway.h  Makefile.am  UHttpRouter.cc  UHttpRouter.h  libUniSet3HttpAPIGateway.pc.in  main.cc  start_fg.sh
extensions/HttpAPIGateway/tests/: Makefile.am  apigateway-test-configure.xml  apigateway-tests.at  (+5 more)
extensions/HttpResolver/: HttpResolver.cc  HttpResolver.h  Makefile.am  main.cc
extensions/IOControl/: ComediInterface.cc  ComediInterface.h  IOControl.cc  IOControl.h  Makefile.am  create_links.sh  iocalibr.cc  iocontrol.cc  libUniSet3IOControl.pc.in  start_fg.sh
extensions/LogDB/: LogDB.cc  LogDB.h  Makefile.am  logdb-conv.cc  main.cc  start_fg.sh  start_fg_single.sh  stop.sh  uniset3-logdb-adm
extensions/LogicProcessor/: Element.cc  Element.h  LProcessor.cc  LProcessor.h  Makefile.am  PassiveLProcessor.cc  PassiveLProcessor.h  Schema.cc  Schema.h  SchemaXML.cc  TA2D.cc  TA2D.h  TAND.cc  TDelay.cc  TDelay.h  TNOT.cc  TOR.cc  TRS.cc  TSEL_R.cc  libUniSet3LogicProcessor.pc.in  logicproc.cc  plogicproc.cc  start_fg.sh  start_fg_plogic.sh
extensions/MQTTPublisher/: MQTTPublisher.cc  MQTTPublisher.h  Makefile.am  libUniSet3MQTTPublisher.pc.in  main.cc  start_fg.sh  uniset3-functions.sh
extensions/ModbusMaster/: MBConfig.cc  MBConfig.h  MBExchange.cc  MBExchange.h  MBTCPMaster.cc  MBTCPMaster.h  MBTCPMultiMaster.cc  MBTCPMultiMaster.h  Makefile.am  RTUExchange.cc  RTUExchange.h  RTUStorage.cc  RTUStorage.h  libUniSet3MBTCPMaster.pc.in  libUniSet3RTU.pc.in  main.cc  mb-perf-test.cc  mtr-conv.cc  mtr-read.cc  mtr-setup.cc  multi-main.cc  rtuexchange.cc  rtustate.cc  start_fg_mb_perftest.sh  start_fg_mbrtu.sh  start_fg_mbtcp.sh  start_fg_mbtcpmulti.sh  vtconv.cc
extensions/ModbusSlave/: MBSlave.cc  MBSlave.h  Makefile.am  libUniSet3MBSlave.pc.in  mbslave.cc  mbtcp-persistentslave.cc  start_fg.sh  start_tcp2_fg.sh  start_tcp_fg.sh  start_tcp_fg2.sh
extensions/OPCUAExchange/: Makefile.am  OPCUAClient.cc  OPCUAClient.h  OPCUAExchange.cc  OPCUAExchange.h  client.cc  libUniSet3OPCUAExchange.pc.in  main.cc  start_fg.sh
extensions/OPCUAServer/: Makefile.am  OPCUAServer.cc  OPCUAServer.h  libUniSet3OPCUAServer.pc.in  main.cc  start_fg.sh
extensions/RRDServer/: Makefile.am  RRDServer.cc  RRDServer.h  libUniSet3RRDServer.pc.in  main.cc  start_fg.sh
extensions/SMViewer/: Makefile.am  SMViewer.cc  SMViewer.h  main.cc
extensions/SharedMemory/: Makefile.am  SharedMemory.cc  SharedMemory.h  libUniSet3SharedMemory.pc.in  smemory.cc  start_fg.sh  start_fg_testlost.sh
extensions/UNetUDP/: Makefile.am  MulticastTransport.cc  MulticastTransport.h  UDPPacket.cc  UDPPacket.h  UDPTransport.cc  UDPTransport.h  UNetExchange.cc  UNetExchange.h  UNetReceiver.cc  UNetReceiver.h  UNetSender.cc  UNetSender.h  UNetTransport.h  libUniSet3UNetUDP.pc.in  start_fg.sh  unet-multicast-tester.cc  unet-udp-tester.cc  unetexchange.cc  uniset3-start.sh
extensions/URepository/: Makefile.am  URepository.cc  URepository.h  URepositorySugar.h  main.cc
extensions/UWebSocketGate/: Makefile.am  UWebSocketGate.cc  UWebSocketGate.h  libUniSet3UWebSocketGate.pc.in  main.cc  start_fg.sh
extensions/include/: Calibration.h  DigitalFilter.h  Extensions.h  IOBase.h  MTR.h  PID.h  SMInterface.h  UObject_SK.h  VTypes.h
extensions/lib/: Calibration.cc  DigitalFilter.cc  Extensions.cc  IOBase.cc  MTR.cc  Makefile.am  PID.cc  SMInterface.cc  UObject_SK.cc  VTypes.cc
extensions/tests/: Makefile.am  sm_perf_test.cc  sm_perf_test.sh  test_async_client.cc  test_calibration.cc  test_digitalfilter.cc  test_iobase.cc  test_iobase_with_sm.cc  test_ionotifystream_async_client.cc  test_restapi_uniset.cc  test_ui.cc  test_vtypes.cc  tests_with_conf.cc  tests_with_conf.sh  tests_with_conf.xml  tests_with_sm.cc  tests_with_sm.h  tests_with_sm.sh  tests_with_sm.xml  testsuite-functions.sh
proto/: Makefile.am  proto.mk
proto/Log/: LogServer.proto  Makefile.am
proto/Processes/: IOController.proto  Makefile.am
proto/UniSetTypes/: Configurator.proto  Makefile.am  MessageTypes.proto  MetricsExporter.proto  URepository.proto  UniSetManager.proto  UniSetObject.proto  UniSetTypes.proto
src/Core/: Configuration.cc  ConfiguratorProxy.cc  IOControllerProxy.cc  IONotifyControllerProxy.cc  Makefile.am  MessageType.cc  MetricsExporterProxy.cc  UInterface.cc  UniSetActivator.cc  UniSetManager.cc  UniSetManagerProxy.cc  UniSetObject.cc  UniSetObjectProxy.cc  UniSetTypes.cc
src/Log/: Debug.cc  DebugExtBuf.h  DebugStream.cc  LogAgregator.cc  LogReader.cc  LogServer.cc  LogServerTypes.cc  LogSession.cc  Makefile.am
tests/GRPCTest/: Makefile.am  async_client.cc  async_consumer.cc  async_server.cc  async_server.proto  client.cc  server.cc  server.proto
(+443 files in other folders)
