############################################################################
# This file is part of the UniSet library                                  #
############################################################################

SUBDIRS = UniSetTypes Processes Log

include $(top_builddir)/include.mk
