############################################################################
# This file is part of the UniSet library                                  #
############################################################################

noinst_LTLIBRARIES = libUGRPC.la
libUGRPC_la_CXXFLAGS = $(SIGC_CFLAGS) $(POCO_CFLAGS)
libUGRPC_la_LIBADD = $(SIGC_LIBS) $(POCO_LIBS)
libUGRPC_la_SOURCES = UAsyncClient.cc

include $(top_builddir)/include.mk
